# market-research

./: .gitignore  01-celok-osszefoglalo.md  02-javasolt-megoldas.md  BUDAPEST_IMPROVEMENTS.md  README.md  budapest_jobs.csv  budapest_search_guide.md  config.example.toml  profile-template.txt  prompt.txt  pyproject.toml  run_budapest_pipeline.sh
examples/: profile.txt  prompt.txt
src/job_finder/: cli.py  config.py  models.py  profile_ingest.py  prompt_parser.py
src/job_finder/collectors/: __init__.py  budapest_search.py  greenhouse.py  html_generic.py  jsonld.py  manual_import.py  scraper.py
src/job_finder/export/: __init__.py  by_location.py  csv.py  markdown.py  pdf.py
src/job_finder/normalize/: __init__.py  dedupe.py  html_to_text.py
src/job_finder/ranking/: __init__.py  llm_classifier.py  rules.py
src/job_finder/storage/: __init__.py  sqlite.py
