[project]
name = "job-finder"
version = "0.1.0"
description = "Python-first job collection and relevance ranking pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
]

[project.scripts]
job-finder = "job_finder.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = true